dataset1235/2025-2/610742602/users/1532633968/executions/677928262_1626817775.log
== RUN (2025-08-26 14:54:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math 

print (math.pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:54:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import *

print (pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
3.141592653589793
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
3.141592653589793
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
3.141592653589793
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
3.141592653589793
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
3.141592653589793
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 14:52:55)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math *

print(pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 5
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 5
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 5
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 5
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 5
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 5
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
